<resources>
    <string name="A_file">a file</string>
    <string name="About">About</string>
    <string name="Accept">Accept</string>
    <string name="Accounts">Accounts</string>
    <string name="Add">Add</string>
    <string name="Add_Contacts">Add Contacts</string>
    <string name="Add_Favorite">Add Favorite</string>
    <string name="Add_New_Group">Add New Group</string>
    <string name="Add_To_Group">Add To Group</string>
    <string name="Add_phone_number">Add phone number</string>
    <string name="Add_to_existing_contact">Add to existing contact</string>
    <string name="Added_by_Me">Added by Me</string>
    <string name="Added_by_s">Added by %s</string>
    <string name="Additional_t9_language">Additional T9 language</string>
    <string name="All_Contacts">All Contacts</string>
    <string name="All_other_contacts">All other contacts</string>
    <string name="Allow">Allow</string>
    <string name="Allow_s_draw_over_other_apps">Allow %s draw over other apps</string>
    <string name="Allow_s_permission">Allow %1$s permission</string>
    <string name="Allow_simpler_dialer_to_access_your_Phone_and_Contacts">Allow Simpler Dialer to access your Phone and Contacts</string>
    <string name="Already_have_an_account">Already have an account?</string>
    <string name="Android_l_palette">Android Lollipop Palette</string>
    <string name="Anniversary">Anniversary</string>
    <string name="Are_you_sure">Are you sure?</string>
    <string name="Attach_File">Attach File</string>
    <string name="Attachments">Attachments</string>
    <string name="Auto_Backup">Auto Backup</string>
    <string name="Automatic_Merge">Automatic Merge</string>
    <string name="Automatic_Merge_available_in_Simpler_Pro">Automatic Merge available in Simpler Pro.</string>
    <string name="Backing_up_">Backing up…</string>
    <string name="Backup">Backup</string>
    <string name="Backup_all_address_book_to_keep_your_contacts_in_a_safe_place">Backup all address book to keep your contacts in a safe place</string>
    <string name="Backup_completed">Backup Completed</string>
    <string name="Backup_contact_s_of_s">Backup contact %1$d of %2$d</string>
    <string name="Backup_details">Backup Details</string>
    <string name="Backup_now">Backup now</string>
    <string name="Backups">Backups</string>
    <string name="Backups_short_phrase">Backups</string>
    <string name="Between_accounts">Between accounts</string>
    <string name="Birthday">Birthday</string>
    <string name="Black">Black</string>
    <string name="Block">Block</string>
    <string name="Block_a_number">Block a number</string>
    <string name="Blocked_call">Blocked call</string>
    <string name="By_switching_off_you_will_not_be_notified_on_new_duplications">By switching off you will not be notified on new duplications</string>
    <string name="Call_contact">Call contact</string>
    <string name="Call_details">Call Details</string>
    <string name="Caller_ID_and_Dialer">Caller ID &amp; Dialer</string>
    <string name="Caller_Id">Caller Id</string>
    <string name="Cancel">Cancel</string>
    <string name="Check_it_out">Check it out</string>
    <string name="Check_the_box_next_to_s">Check the box next to %s</string>
    <string name="Choose_Favorites">Choose Favorites</string>
    <string name="Choose_default_account">Choose default account</string>
    <string name="Choose_email">Choose email</string>
    <string name="Choose_from_gallery">Choose from gallery</string>
    <string name="Cleaner_app_name">Cleaner</string>
    <string name="Cleanup">Cleanup</string>
    <string name="Clear_default">Clear default</string>
    <string name="Close">Close</string>
    <string name="Cloud_Backups">Cloud Backups</string>
    <string name="Company">Company</string>
    <string name="Contact_List">Contact List</string>
    <string name="Contact_Us">Contact us</string>
    <string name="Contact_color">Contact color</string>
    <string name="Contact_restored_successfully">contact restored successfully</string>
    <string name="Contacted_s_days_ago">Contacted %s days ago</string>
    <string name="Contacts">Contacts</string>
    <string name="Contacts_permissions_are_needed">Contacts permissions are needed</string>
    <string name="Contacts_restored_successfully">contacts restored successfully</string>
    <string name="Contacts_to_display">Contacts to display</string>
    <string name="Contacts_without_email">Contacts without email</string>
    <string name="Contacts_without_phone_number">Contacts without phone number</string>
    <string name="Continue">Continue</string>
    <string name="Copy_to_clipboard">Copy to clipboard</string>
    <string name="Create_Account">Create Account</string>
    <string name="Create_Group">Create Group</string>
    <string name="Create_new_contact">Create new contact</string>
    <string name="Custom">Custom</string>
    <string name="Dark">Dark</string>
    <string name="Dark_mode">Dark mode</string>
    <string name="Default_Account">Default account</string>
    <string name="Delete">Delete</string>
    <string name="Delete_Backup">Delete Backup</string>
    <string name="Delete_Group">Delete Group</string>
    <string name="Delete_Group_question">Delete Group?</string>
    <string name="Delete_backup_question">Delete backup?</string>
    <string name="Delete_contact">Delete contact?</string>
    <string name="Delete_log_question">Delete log?</string>
    <string name="Delete_s_selected_backups_">Delete %1$d selected backups?</string>
    <string name="Delete_s_selected_logs">Delete selected logs?</string>
    <string name="Delete_selected_contacts">Delete selected contacts?</string>
    <string name="Deleting_this_group_will_permanently_remove_all_contacts_added_by_others">Deleting this group will permanently remove all contacts added by others and stop others from accessing your group.</string>
    <string name="Deselect_all">Deselect All</string>
    <string name="Detect_spam_calls">Detect spam calls</string>
    <string name="Dialer">Dialer</string>
    <string name="Dialpad_0_number">0</string>
    <string name="Dialpad_1_number">1</string>
    <string name="Dialpad_2_number">2</string>
    <string name="Dialpad_3_number">3</string>
    <string name="Dialpad_4_number">4</string>
    <string name="Dialpad_5_number">5</string>
    <string name="Dialpad_6_number">6</string>
    <string name="Dialpad_7_number">7</string>
    <string name="Dialpad_8_number">8</string>
    <string name="Dialpad_9_number">9</string>
    <string name="Dialpad_pound_number">\#</string>
    <string name="Dialpad_star_number">*</string>
    <string name="Discard">Discard</string>
    <string name="Discard_changes_question">Discard changes?</string>
    <string name="Display_Order">Display order</string>
    <string name="Display_language">Display language</string>
    <string name="Do_you_want_to_add_s_contacts_to_your_address_book">Do you want to add %s contacts to your address book?</string>
    <string name="Done">Done</string>
    <string name="Dont_show_again">"Don't show again"</string>
    <string name="Dont_waste_your_time_on_unwanted_calls">Don’t waste your time on unwanted calls</string>
    <string name="Downloaded">Downloaded</string>
    <string name="Downloading">Downloading</string>
    <string name="Duplicate_Contacts">Duplicate Contacts</string>
    <string name="Duplicate_Emails">Duplicate Emails</string>
    <string name="Duplicate_Phones">Duplicate Phones</string>
    <string name="Duplicates">Duplicates</string>
    <string name="Duplication_ignored">Duplication ignored</string>
    <string name="Easy_backup">Easy Backup</string>
    <string name="Edit">Edit</string>
    <string name="Edit_Group">Edit Group</string>
    <string name="Edit_contact">Edit Contact</string>
    <string name="Edit_contact_name">Edit contact name</string>
    <string name="Edit_contacts">Edit contacts</string>
    <string name="Email">Email</string>
    <string name="Email_address_already_exist">Email address already exist</string>
    <string name="Email_sent">Email sent</string>
    <string name="Enable_native_contacts_app">Enable native contacts app</string>
    <string name="Enter_your_email_address_above_and_we_will_send_you_instructions_how_to_change_your_password">Enter your email address above and we will send you instructions how to change your password.</string>
    <string name="Existing_names">Existing names</string>
    <string name="Export">Export</string>
    <string name="FAQ">FAQ</string>
    <string name="Facebook">Facebook</string>
    <string name="Failed_to_connect_to_server">Failed to connect to server</string>
    <string name="Favorite_click_action">Favorite click action</string>
    <string name="Favorites">Favorites</string>
    <string name="Filters">Filters</string>
    <string name="Find_contacts">Find contacts...</string>
    <string name="First_name">First name</string>
    <string name="First_name_first">First name first</string>
    <string name="Forgot_your_password">Forgot your password?</string>
    <string name="Frequently_used">Frequently Used</string>
    <string name="Full_Backup">Full Backup</string>
    <string name="Full_Name">Full Name</string>
    <string name="General">General</string>
    <string name="Get_started">Get Started</string>
    <string name="Get_the_most_out_of">Get the most out of %s</string>
    <string name="Google">Google</string>
    <string name="Gray">Gray</string>
    <string name="Group">Group</string>
    <string name="Group_Email">Group Email</string>
    <string name="Group_Name">Group Name</string>
    <string name="Group_Text">Group Text</string>
    <string name="Group_is_not_updated_Please_return_to_your_groups_screen_to_update_your_group">Group is not updated. Please return to your groups screen to update your group.</string>
    <string name="Hey_there">Hey there</string>
    <string name="How_happy_are_you_with_s">How happy are you with %s?</string>
    <string name="Ignore_these_arent_duplicates">"Ignore - these aren't duplicates"</string>
    <string name="Later">Later</string>
    <string name="Love_Simpler_question">Love Simpler?</string>
    <string name="Merge_all_duplicates">Merge all duplicates</string>
    <string name="Merge_verb">Merge</string>
    <string name="Min_6_characters">Min 6 characters</string>
    <string name="My_Name">My Name</string>
    <string name="Password">Password</string>
    <string name="Send_feedback">Send feedback</string>
    <string name="Share">Share</string>
    <string name="Sign_In">Sign In</string>
    <string name="Simpler">Simpler</string>
    <string name="Simpler_Groups">Simpler Groups</string>
    <string name="Sure_exclamation">Sure!</string>
    <string name="Thank_you">Thank you!</string>
    <string name="That_s_awesome">"That's awesome!"</string>
    <string name="These_are_duplicates">These are duplicates</string>
    <string name="Upgrade">Upgrade</string>
    <string name="Welcome_to_s">Welcome to %s</string>
    <string name="Will_you_rate_us_on_google_play">Will you rate us on Google Play?</string>
    <string name="Would_you_like_to_email_us_your_feedback">Would you like to email us your feedback?</string>
    <string name="You_can_freely_merge_duplicates_from_the_Contacts_screen">You can freely merge duplicates from the Contacts screen.</string>
    <string name="accept_terms">accept terms</string>
    <string name="already_have_groups">Already have groups?</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="by_creating_an_account_you_agree_to_the_simpler_terms_of_use_and_privacy_policy">By creating an account, you agree to the Terms of Use and Privacy Policy</string>
    <string name="i_agree">I agree</string>
    <string name="i_agree_to_the_terms_of_use_and_privacy_policy">I agree to the Terms of Use and Privacy Policy</string>
</resources>