<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_star_outline_white_24dp" android:id="@id/menu_favorite_contact" android:orderInCategory="1" android:title="@string/Add_Favorite" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_edit_white_24dp" android:id="@id/menu_edit_contact" android:orderInCategory="2" android:title="@string/Edit_contact" app:showAsAction="never" />
    <item android:id="@id/menu_share_contact" android:orderInCategory="3" android:title="@string/Share" app:showAsAction="never" />
    <item android:id="@id/menu_delete_contact" android:orderInCategory="4" android:title="@string/Delete" app:showAsAction="never" />
</menu>