<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="24.0sp" android:gravity="center" android:id="@id/headline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Automatic_Merge" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="16.0sp" android:textStyle="normal" android:gravity="center" android:id="@id/text1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/Automatic_Merge_available_in_Simpler_Pro" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="16.0sp" android:textStyle="normal" android:gravity="center" android:id="@id/text2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/You_can_freely_merge_duplicates_from_the_Contacts_screen" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="?android:listPreferredItemHeightSmall" android:layout_marginTop="32.0dip">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@id/later" android:layout_width="0.0dip" android:layout_height="fill_parent" android:foreground="?selectableItemBackground" android:text="@string/Later" android:layout_weight="1.0" />
        <View android:id="@id/divider" android:background="@color/divider_light" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:gravity="center" android:id="@id/upgrade" android:layout_width="0.0dip" android:layout_height="fill_parent" android:foreground="?selectableItemBackground" android:text="@string/Upgrade" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>