<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="330.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center|top" android:orientation="vertical" android:id="@id/question_layout" android:padding="@dimen/activity_horizontal_margin" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="26.0sp" android:gravity="center" android:id="@id/question_headline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26.0dip" android:text="@string/Hey_there" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="20.0sp" android:gravity="center" android:id="@id/question_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_horizontal_margin" android:text="@string/How_happy_are_you_with_s" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="36.0dip">
            <ImageView android:id="@id/negative_imageView_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_review_sad" android:layout_weight="1.0" />
            <ImageView android:id="@id/negative_imageView_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_review_regular" android:layout_weight="1.0" />
            <ImageView android:id="@id/positive_imageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_review_happy" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/positive_layout" android:padding="@dimen/activity_horizontal_margin" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="26.0sp" android:gravity="center" android:id="@id/thank_you_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/That_s_awesome" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/happy_review" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="20.0sp" android:gravity="center" android:id="@id/please_rate_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/Will_you_rate_us_on_google_play" />
        <Button android:id="@id/rate_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_view_item_padding" android:layout_marginTop="36.0dip" android:layout_marginRight="@dimen/list_view_item_padding" android:text="@string/Sure_exclamation" style="@style/BigButtonStyle" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/negative_layout" android:padding="@dimen/activity_horizontal_margin" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="26.0sp" android:gravity="center" android:id="@id/thank_you_negative_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Thank_you" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="20.0sp" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/email_us_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_horizontal_margin" android:text="@string/Would_you_like_to_email_us_your_feedback" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff2487dd" android:gravity="center" android:layout_gravity="center" android:id="@id/send_feedback_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_horizontal_margin" android:text="@string/Send_feedback" />
        <Button android:id="@id/close_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_view_item_padding" android:layout_marginTop="60.0dip" android:layout_marginRight="@dimen/list_view_item_padding" android:text="@string/Close" style="@style/BigButtonStyle" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/advanced_layout" android:padding="@dimen/activity_horizontal_margin" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="26.0sp" android:gravity="center" android:id="@id/love_simpler_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Love_Simpler_question" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="20.0sp" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/if_you_find_useful_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_horizontal_margin" android:text="@string/Will_you_rate_us_on_google_play" />
        <Button android:id="@id/advanced_rate_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_view_item_padding" android:layout_marginTop="64.0dip" android:layout_marginRight="@dimen/list_view_item_padding" android:text="@string/Sure_exclamation" style="@style/BigButtonStyle" />
    </LinearLayout>
    <ImageView android:id="@id/cancel_imageView" android:padding="16.0dip" android:layout_width="?android:listPreferredItemHeightSmall" android:layout_height="?android:listPreferredItemHeightSmall" android:foreground="?selectableItemBackground" android:src="@drawable/ic_close_grey600_24dp" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="12.0sp" android:textColor="@color/subtitle_extra_light" android:id="@id/never_show_textView" android:padding="16.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Dont_show_again" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
</RelativeLayout>