<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/img_no_groups" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="17.0sp" android:gravity="center" android:id="@id/empty_group_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Simpler_Groups" />
        <Button android:textSize="17.0sp" android:id="@id/create_group_button" android:paddingLeft="40.0dip" android:paddingTop="20.0dip" android:paddingRight="40.0dip" android:paddingBottom="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/Add_New_Group" style="@style/Base.Widget.AppCompat.Button.Borderless" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/sign_in_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/activity_vertical_margin" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <TextView android:textColor="@color/subtitle_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/already_have_groups" />
        <TextView android:textColor="@color/color_primary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/Sign_In" />
    </LinearLayout>
</RelativeLayout>