<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/buttons_layout" android:padding="@dimen/list_view_item_half_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:id="@id/merge_button" android:paddingLeft="@dimen/list_view_item_half_padding" android:paddingRight="@dimen/list_view_item_half_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Merge_verb" style="@style/BigButtonStyle" />
        <Button android:textAppearance="?android:textAppearanceSmall" android:id="@id/accept_button" android:paddingLeft="@dimen/list_view_item_half_padding" android:paddingRight="@dimen/list_view_item_half_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/These_are_duplicates" style="@style/BigButtonStyle" />
        <Button android:textAppearance="?android:textAppearanceSmall" android:id="@id/ignore_button" android:paddingLeft="@dimen/list_view_item_half_padding" android:paddingRight="@dimen/list_view_item_half_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/Ignore_these_arent_duplicates" style="@style/BigButtonStyle" />
        <Button android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:id="@id/merge_all_button" android:paddingLeft="@dimen/list_view_item_half_padding" android:paddingRight="@dimen/list_view_item_half_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/Merge_all_duplicates" style="@style/BigButtonStyle" />
    </LinearLayout>
    <ListView android:id="@id/list_view" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="@null" android:dividerHeight="0.0dip" android:layout_above="@id/buttons_layout" />
</RelativeLayout>