<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center|top" android:orientation="vertical" android:id="@id/main_layout" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="12.0sp" android:textColor="@color/red_text_color_light" android:gravity="center" android:id="@id/error_text_view" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textStyle="bold" android:gravity="center|left" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/Full_Name" android:singleLine="true" android:layout_weight="1.0" />
        <EditText android:textAppearance="?android:textAppearanceSmall" android:gravity="center|left" android:id="@id/name_edit_text" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/My_Name" android:singleLine="true" android:layout_weight="2.0" android:inputType="textCapWords|textNoSuggestions" android:imeOptions="actionNext">
            <requestFocus />
        </EditText>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textStyle="bold" android:gravity="center|left" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/Email" android:singleLine="true" android:layout_weight="1.0" />
        <EditText android:textAppearance="?android:textAppearanceSmall" android:gravity="center|left" android:id="@id/email_edit_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/example.email.com" android:singleLine="true" android:layout_weight="2.0" android:inputType="textEmailAddress" android:imeOptions="actionNext" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textStyle="bold" android:gravity="center|left" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/Password" android:singleLine="true" android:layout_weight="1.0" />
        <EditText android:textAppearance="?android:textAppearanceSmall" android:gravity="center|left" android:id="@id/password_edit_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/Min_6_characters" android:singleLine="true" android:layout_weight="2.0" android:inputType="textPassword" android:imeOptions="actionDone" />
    </LinearLayout>
    <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:id="@id/share_data_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
        <android.support.v7.widget.AppCompatCheckBox android:id="@id/share_checkbox" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" />
    </LinearLayout>
    <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:id="@id/terms_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
        <android.support.v7.widget.AppCompatCheckBox android:id="@id/privacy_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="11.0sp" android:textColor="@color/subtitle_extra_light" android:id="@id/privacy_policy_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/i_agree_to_the_terms_of_use_and_privacy_policy" />
    </LinearLayout>
    <Button android:textSize="16.0sp" android:gravity="center" android:id="@id/button" android:background="@drawable/rounded_button_primary_color" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/Create_Account" style="@style/BigButtonStyle" />
</LinearLayout>